--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -24,8 +24,8 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Administration</a>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item" href="#">Ajouter un bien</a>
-                            <a class="dropdown-item" href="#">Ajouter autre</a>
+                            <a class="dropdown-item" href="{{ path('admin.property') }}">Gestion des biens</a>
+                            <a class="dropdown-item" href="{{ path('admin.property.create') }}">Ajouter un bien</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="#">Separated link</a>
                         </div>
@@ -37,6 +37,7 @@
                 </form>
             </div>
         </nav>
+
         {% block body %}{% endblock %}
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
