--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -31,10 +31,14 @@
                         </div>
                     </li>
                 </ul>
-                <form class="form-inline my-2 my-lg-0">
-                    <input class="form-control mr-sm-2" type="text" placeholder="Taper votre recherche">
-                    <button class="btn btn-secondary my-2 my-sm-0" type="submit">Rechercher</button>
-                </form>
+
+                {% if app.user %}
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a href="{{ path('app_logout') }}" class="nav-link">Déconnexion</a>
+                    </li>
+                </ul>
+                {% endif %}    
             </div>
         </nav>
 
