--- a/templates/admin/property/_form.html.twig
+++ b/templates/admin/property/_form.html.twig
@@ -20,5 +20,8 @@
     <div class="row">
         <div class="col">{{form_row(form.description)}}</div>
     </div>
+    <div class="row">
+        <div class="col">{{ form_rest(form) }}</div>
+    </div>
     <button class="btn btn-primary">{{ button|default('Enregistrer') }}</button>
 {{form_end(form)}}
