--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,11 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <title>
-            {% block title %}Welcome!
-            {% endblock %}
+            {% block title %}MaSuperAgence{% endblock %}
         </title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://bootswatch.com/4/cerulean/bootstrap.min.css"> {% block stylesheets %}{% endblock %}{% block javascripts %}{% endblock %}
+        <link rel="stylesheet" href="https://bootswatch.com/4/cerulean/bootstrap.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/css/select2.min.css">
+        {% block stylesheets %}{% endblock %}
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
@@ -26,6 +27,8 @@
                         <div class="dropdown-menu">
                             <a class="dropdown-item" href="{{ path('admin.property') }}">Gestion des biens</a>
                             <a class="dropdown-item" href="{{ path('admin.property.create') }}">Ajouter un bien</a>
+                            <a class="dropdown-item" href="{{ path('option_index') }}">Gestion des options</a>
+                            <a class="dropdown-item" href="{{ path('option_new') }}">Ajouter une option</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="#">Separated link</a>
                         </div>
@@ -46,5 +49,12 @@
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+        
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.min.js"></script>
+        <script>
+            $('select').select2();
+        </script>
+
+        {% block javascripts %}{% endblock %}
     </body>
 </html>
